--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,14 +11,13 @@
   },
   "dependencies": {
     "@heroui/react": "^2.7.5",
-    "@heroui/system": "^2.4.12",
-    "@heroui/theme": "^2.4.12",
-    "@heroui/toast": "^2.0.6",
-    "@tailwindcss/cli": "^4.1.0",
+    "axios": "^1.8.4",
     "framer-motion": "^12.6.3",
     "lucide-react": "^0.487.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-helmet": "^6.1.0",
+    "react-hook-form": "^7.55.0",
     "react-router-dom": "^7.4.1",
     "zustand": "^5.0.3"
   },
