--- a/backend/package.json
+++ b/backend/package.json
@@ -29,6 +29,8 @@
     "accesscontrol": "^2.2.1",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^3.0.2",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
     "cookie-parser": "^1.4.7",
     "crypto": "^1.0.1",
     "jsonwebtoken": "^9.0.2",
